--- a/styles/main.less
+++ b/styles/main.less
@@ -70,6 +70,20 @@ span.button {
   }
 }
 
+table.custom {
+  td {
+    padding: 4px;
+    border:none !important;
+  }
+
+  tr:nth-child(odd) td {
+    //background-color: #fafafa;
+  }
+  tr:nth-child(even) td {
+    //background-color: #EEEEEE;
+  }
+}
+
 table.simple {
   width: 98%;
   margin: 0 auto;
