--- a/templates/mappings/property.html
+++ b/templates/mappings/property.html
@@ -90,10 +90,7 @@
 
     <md-divider></md-divider>
     <div style="color: #888;padding-top: 10px;text-align: center;">
-        صفحه
-        {{paging.current}}
-        <!--<input type="text" ng-model="paging.current" style="width: 45px;border: solid 1px #ddd;border-radius: 2px;text-align: center;">-->
-        از{{paging.pageCount}} - تعداد کل آیتم‌ها {{paging.totalSize}}
+        صفحه {{paging.current | persianNumbers}} از {{paging.pageCount | persianNumbers}} - تعداد کل آیتم‌ها {{paging.totalSize | persianNumbers}}
     </div>
     <md-divider></md-divider>
 
@@ -110,7 +107,7 @@
         </thead>
         <tbody>
         <tr ng-repeat="item in items track by $index" ng-class="{even: $even, odd: $odd}">
-            <td>{{(paging.pageIndex * paging.pageSize + $index)+1}}</td>
+            <td>{{(paging.pageIndex * paging.pageSize + $index)+1 | persianNumbers}}</td>
             <td>{{item.property}}</td>
             <td>
                 <div ng-repeat="t in item.templates track by $index">{{t}}</div>
