--- a/templates/mappings/template-item-rule-edit.html
+++ b/templates/mappings/template-item-rule-edit.html
@@ -11,15 +11,16 @@
         </md-toolbar>
 
         <div class="dialog-panel-content scroll2 rtl right" layout-padding layout="column" dir="rtl" style="height: 360px;">
-            <md-input-container class="rtl right" >
+            <md-input-container class="rtl right" style="margin-top: 20px; margin-bottom: -20px;" >
                 <label>property</label>
                 <input type="text"
-                       ng-model="model.property"
+                       ng-model="model.property.property"
                        ng-disabled="true"
                        required
                        aria-label="property">
             </md-input-container>
 
+<!--
             <div layout="row" layout-align="center center" style="width: 100%;">
                 <md-autocomplete class="rtl right" dir="rtl" style="width: 100%;"
                                  md-input-name="autocompletePredicate"
@@ -42,10 +43,28 @@
                 </md-button>
             </div>
             <br>
+-->
+
+            <md-autocomplete class="rtl right" dir="rtl"
+                             md-input-name="autocompletePredicate"
+                             md-selected-item="model.rule.predicate"
+                             md-search-text="searchPredicate"
+                             md-items="item in suggestPredicates(searchPredicate)"
+                             md-item-text="item"
+                             md-input-minlength="2"
+                             md-delay="300"
+                             md-require-match
+                             md-floating-label="predicate" aria-label="predicate">
+                <md-item-template>
+                    <span md-highlight-text="searchPredicate" md-highlight-flags="^i">{{item}}</span>
+                </md-item-template>
+                <md-not-found>No predicate matching.</md-not-found>
+            </md-autocomplete>
+            <br>
 
             <md-autocomplete class="rtl right" dir="rtl"
                              md-input-name="autocompleteUnit"
-                             md-selected-item="model.unit"
+                             md-selected-item="model.rule.unit"
                              md-search-text="searchUnit"
                              md-items="item in suggestUnits(searchUnit)"
                              md-item-text="item | extractLastUrlItem"
@@ -62,7 +81,7 @@
 
             <md-autocomplete class="rtl right" dir="rtl"
                              md-input-name="autocompleteTransform"
-                             md-selected-item="model.transform"
+                             md-selected-item="model.rule.transform"
                              md-search-text="searchTransform"
                              md-items="item in suggestTransforms(searchTransform)"
                              md-item-text="item.label"
@@ -80,7 +99,7 @@
 
             <div class="row" layout-align="center center">
                 <span>تایید</span>
-                <md-checkbox ng-model="model.valid" aria-label="تایید"></md-checkbox>
+                <md-checkbox ng-model="model.rule.valid" aria-label="تایید"></md-checkbox>
             </div>
         </div>
 
@@ -90,7 +109,7 @@
                            aria-label="ذخیره"
                            class="md-raised md-primary"
                            ng-disabled="myForm.$invalid"
-                           ng-click="save(model, $index)">ذخیره
+                           ng-click="save($index)">ذخیره
                 </md-button>
 
                 <md-button class="md-raised"
