allow item.predicate to be out of list show constant by mapPrefix fix some issues

--- a/templates/mappings/property-filter.html
+++ b/templates/mappings/property-filter.html
@@ -14,7 +14,7 @@
             <thead>
             <tr>
                 <th>خصیصه</th>
-                <th>گزاره</th>
+                <!--<th>گزاره</th>-->
                 <th>الگو</th>
             </tr>
             </thead>
@@ -23,7 +23,7 @@
                 ng-class="{even: $even, odd: $odd}"
                 class="clickable" ng-cloak>
                 <td><span>{{property}}</span></td>
-                <td><span>{{predicate}}</span></td>
+                <!--<td><span>{{predicate}}</span></td>-->
                 <td><span>{{item.template}}</span></td>
             </tr>
             </tbody>
