--- a/templates/mappings/template-item.html
+++ b/templates/mappings/template-item.html
@@ -23,11 +23,21 @@
             <tr ng-repeat="rule in selectedTemplate.rules track by $index" class="clickable">
                 <td><span>{{rule.predicate}}</span></td>
                 <td>
-                    <span ng-if="!rule.constant.startsWith('fkgo:')">{{rule.constant | mapPrefix}}</span>
-                    <a ng-if="rule.constant.startsWith('fkgo:')"
+                    <a ng-if="!rule.constant.startsWith('fkgo:')"
                        target="_blank"
-                       href="#!/ontology/property/http:~2F~2Ffkg.iust.ac.ir~2Fontology~2F{{rule.constant.replace('fkgo:', '')}}">
-                        {{rule.constant | mapPrefix}}</a>
+                       ng-href="{{rule.constant}}">{{rule.constant | mapPrefix}}</a>
+
+                    <a ng-if="rule.constant.startsWith('fkgo:')"
+                       ui-sref="ontology.property({propertyUrl:'http://fkg.iust.ac.ir/ontology/{{rule.constant.replace('fkgo:', '')}}'})"
+                       target="_blank">
+                        {{rule.constant | mapPrefix}}
+                    </a>
+
+                    <!--<a ng-if="rule.constant.startsWith('fkgo:')"
+                    target="_blank"
+                    href="#!/ontology/property/http:~2F~2Ffkg.iust.ac.ir~2Fontology~2F{{rule.constant.replace('fkgo:', '')}}">
+                    {{rule.constant | mapPrefix}}
+                    </a>-->
                 </td>
                 <td>
                     <md-button class="md-icon-button"
@@ -88,9 +98,11 @@
                             </td>
                             <td>
                                 <span ng-if="!rr.predicate.startsWith('fkgo:')">{{rr.predicate | mapPrefix}}</span>
-                                <a ng-if="rr.predicate.startsWith('fkgo:')" target="_blank"
-                                   href="#!/ontology/property/http:~2F~2Ffkg.iust.ac.ir~2Fontology~2F{{rr.predicate.replace('fkgo:', '')}}">
+                                <a ng-if="rr.predicate.startsWith('fkgo:')"
+                                   ui-sref="ontology.property({propertyUrl:'http://fkg.iust.ac.ir/ontology/{{rr.predicate.replace('fkgo:', '')}}'})"
+                                   target="_blank">
                                     {{rr.predicate | mapPrefix}}</a>
+                                <!--href="#!/ontology/property/http:~2F~2Ffkg.iust.ac.ir~2Fontology~2F{{rr.predicate.replace('fkgo:', '')}}"-->
                             </td>
                             <td style="width: 120px;">
                                 <span>{{rr.unit | extractLastUrlItem}}</span>
