auto open transform autocomplete

--- a/templates/mappings/template-item-rule-edit.html
+++ b/templates/mappings/template-item-rule-edit.html
@@ -86,6 +86,7 @@
                              md-items="item in suggestTransforms(searchTransform)"
                              md-item-text="item.label"
                              md-input-minlength="0"
+                             md-min-length="0"
                              md-delay="300"
                              md-require-match
                              md-floating-label="transform" aria-label="transform">
