fix issue : ui-sref caches prev data in some situations!!!

--- a/templates/mappings/property.html
+++ b/templates/mappings/property.html
@@ -90,7 +90,8 @@
 
     <md-divider></md-divider>
     <div style="color: #888;padding-top: 10px;text-align: center;">
-        صفحه {{paging.current | persianNumbers}} از {{paging.pageCount | persianNumbers}} - تعداد کل آیتم‌ها {{paging.totalSize | persianNumbers}}
+        صفحه {{paging.current | persianNumbers}} از {{paging.pageCount | persianNumbers}} - تعداد کل آیتم‌ها
+        {{paging.totalSize | persianNumbers}}
     </div>
     <md-divider></md-divider>
 
@@ -114,14 +115,13 @@
             </td>
             <td>
                 <div ng-repeat="p in item.predicates track by $index">
-                    <!--<span ng-if="!p.startsWith('fkgo:')">{{p}}</span>-->
+
                     <a ng-if="!p.startsWith('fkgo:')"
                        target="_blank"
                        ng-href="{{p}}">{{p | mapPrefix}}</a>
 
-
                     <a ng-if="p.startsWith('fkgo:')"
-                       ui-sref="ontology.property({propertyUrl:'http://fkg.iust.ac.ir/ontology/{{p.replace('fkgo:', '')}}'})"
+                       ui-sref="ontology.property({propertyUrl:$parent.getFKGOpropertyUrl(p)})"
                        target="_blank">{{p}}</a>
                 </div>
             </td>
