--- a/templates/mappings/template-item.html
+++ b/templates/mappings/template-item.html
@@ -77,7 +77,7 @@
                 <td>{{$index + 1 | persianNumbers}}</td>
                 <td>
                     <span class="fa fa-lg fa-info-circle filter-property button"
-                          ng-click="filterProperty($event, property.property)"></span>
+                          ng-click="filterProperty($event, property)"></span>
                 </td>
                 <td><span style="white-space: nowrap;">{{property.property}}</span></td>
                 <td>
