show X when not mapped

--- a/templates/mappings/property-filter.html
+++ b/templates/mappings/property-filter.html
@@ -43,6 +43,9 @@
                         <div ng-repeat="r in p.rules track by $index">
                             {{r.predicate}}
                         </div>
+                        <div ng-if="p.rules.length===0">
+                            X
+                        </div>
                     </div>
                 </td>
             </tr>
