--- a/templates/user/password.html
+++ b/templates/user/password.html
@@ -1,4 +1,7 @@
 <md-content layout-padding>
+
+    <div ng-show="error" style="color: red; font-size: 14pt; text-align: center;">{{error}}</div>
+
     <form name="myForm">
         <div>
             <md-input-container class="md-block" flex-gt-sm>
@@ -8,7 +11,7 @@
 
             <md-input-container class="md-block" flex-gt-sm>
                 <label>کلمه‌عبور جدید</label>
-                <input type="password" ng-model="data.newPassword" required name="pw1" id="pw1">
+                <input type="password" ng-model="data.newPassword" required ng-minlength="5" name="pw1" id="pw1">
             </md-input-container>
 
             <md-input-container class="md-block" flex-gt-sm>
@@ -18,7 +21,8 @@
 
         </div>
         <div class='msg-block' ng-show='myForm.$error'>
-            <span class='msg-error' ng-show='myForm.pw2.$error.pwmatch'> تکرار کلمه عبور جدید باید با کلمه عبور جدید دقیقا یکسان باشد</span>
+            <div class='msg-error' ng-show='myForm.pw1.$error.minlength'>کلمه عبور باید حداقل شامل ۵ کاراکتر باشد</div>
+            <div class='msg-error' ng-show='myForm.pw2.$error.pwmatch'> تکرار کلمه عبور جدید باید با کلمه عبور جدید دقیقا یکسان باشد</div>
         </div>
     </form>
 
